<resources>
    <string name="app_name">Роботы ВШЭ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="rate_label">MAC</string>
    <string name="loading_label">Подключение</string>
    <string name="label_name">Имя</string>
    <string name="label_MAC">MAC адрес</string>
    <string name="add_bd_label">Принять</string>
    <string name="cancel_add_bd_label">Отмена</string>
    <string name="ok_add_bd_label">Завершить</string>
    <string name="suggestionNoBtAdapter">На вашем устройстве нет Bluetooth адаптера, дальнейшая работа невозможна</string>
    <string name="error">Ошибка приложения</string>
    <string name="suggestionEnableBluetooth">Пожалуйста, включите bluetooth чтобы приложение заработало!</string>
    <string name="btnEnBt">Включить bluetooth</string>
    <string name="add_device">Добавить устройство</string>
    <string name="paired_devices">Список сопряжённых устройств</string>
    <string name="protocol_control">Управление протоколами</string>
    <string name="favorites_devices">Список сохранённых устройств</string>
    <string name="no_devices_added">Нет сопряжённых устройств</string>
    <string name="go_to_settings">Новое сопряжение</string>
    <string name="protocol_name">Имя:</string>
    <string name="protocol_length">Длина сообщения в байт:</string>
    <string name="protocol_xml">XML вид кода:</string>
    <string name="TAG_default_protocol">arduino_default</string>
    <string name="switch_hold">Удержание команды</string>
    <string name="name_manual_default">Устройство</string>
    <string name="alert_information">Информация</string>
    <string name="alert_device_name">Имя устройства:\u00A0</string>
    <string name="alert_MAC">MAC адрес:\u00A0</string>
    <string name="alert_protocol">Протокол подключения:\u00A0</string>
    <string name="alert_class">Класс:\u00A0</string>
    <string name="alert_type">Тип:\u00A0</string>
    <string name="alert_save">Сохранить</string>
    <string name="alert_device_saving">Сохранение устройства</string>
    <string name="alert_editing">Редактирование</string>
    <string name="alert_change">Редактировать</string>
    <string name="alert_delete">Удалить</string>
    <string name="alert_info">Информация</string>
    <string name="button_forward">Вперёд</string>
    <string name="button_backward">Назад</string>
    <string name="button_leftward">Влево</string>
    <string name="button_rightward">Вправо</string>
    <string name="button_stop">Стоп</string>
    <string name="drawer_item_add_protocol">Добавить новый протокол</string>
    <string name="drawer_item_data_base">Удалить базу данных устройств</string>
    <string name="alert_device_name_tint">Имя устройства</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_code">Исходный код</string>
    <string name="robot_item_image">Внешний вид робота</string>
    <string name="manual_mac">Ввод mac</string>
    <string name="dialog_mac">Ввод MAC адреса</string>
    <string name="hint_dialog_mac">MAC из 1234567890ABCDEF</string>
    <string name="instruction_alert">Подсказка</string>
    <string name="ok">Ок</string>
    <string name="instruction_for_app">Используйте это приложение, чтобы подключиться к вашим роботизированным устройствам. Если список доступных устройств пуст, перейдите в настройки нажатием на назначенную для этого кнопку, создайте новое соединение. Для подключения можно выбирать сразу несколько устройств, чтобы начать соединение выберите их долгим нажатием в списке доступных устройств. Передача данных осуществляется по протоколу, доступному по ссылке: \nhttps://drive.google.com/file/d/15m_IHMHJuL50GD7ED1wr0oiJYxRY-aMS/view?usp=sharing. \nПриложение создано в рамках курсовой работы Колпакова Максима Максимовича в 2021 году.</string>
    <string name="instructions_title">Инструкция</string>
    <string name="other_discoverable_devices">Новые сопряжённые устройства могут быть добавлены в меню ниже</string>
    <string name="TAG_FULL_MES">CodeCatalogue</string>
    <string name="TAG_CLASS_FROM">ClassFromDevice</string>
    <string name="TAG_TYPE_FROM">TypeFromDevice</string>
    <string name="TAG_CLASS_TO">ClassToDevice</string>
    <string name="TAG_TYPE_TO">TypeToDevice</string>
    <string name="TAG_TURN_COM">TurnOfCommand</string>
    <string name="TAG_TYPE_COM">TypeOfCommand</string>
    <string name="TAG_MOVE_CODE">TypeOfMove</string>
    <string name="button_show_protocols">вывод</string>
    <string name="button_save_protocol">добавить выбранный протокол</string>
    <string name="button_add_protocol">добавить новый протокол</string>
    <string name="button_delete_protocols">удалить кастомные протоколы</string>
</resources>